backend/ops/observability/production/kubernetes/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  selector:
    app.kubernetes.io/name: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
